[gd_scene load_steps=7 format=3 uid="uid://s5acu20rk5ck"]

[ext_resource type="Script" path="res://Game.gd" id="1_ekyok"]
[ext_resource type="PackedScene" uid="uid://37gy13rcmadp" path="res://players/player.tscn" id="1_im1cb"]
[ext_resource type="PackedScene" uid="uid://h34qg57c6pio" path="res://ball/ball.tscn" id="2_425si"]
[ext_resource type="PackedScene" uid="uid://c7d7tvxjrw4dy" path="res://map/map.tscn" id="3_apbbr"]
[ext_resource type="PackedScene" uid="uid://lma2umhmaaws" path="res://interface/interface.tscn" id="5_6d8qe"]
[ext_resource type="Script" path="res://saver_loader/saver_loader.gd" id="6_w02vb"]

[node name="Game" type="Node2D"]
script = ExtResource("1_ekyok")

[node name="Map" parent="." instance=ExtResource("3_apbbr")]

[node name="Player1" parent="." groups=["Saveable"] instance=ExtResource("1_im1cb")]
unique_name_in_owner = true
modulate = Color(1, 0, 0, 1)
position = Vector2(128, 324)

[node name="Player2" parent="." groups=["Saveable"] instance=ExtResource("1_im1cb")]
unique_name_in_owner = true
modulate = Color(0, 1, 0, 1)
position = Vector2(1024, 324)
side = "right"

[node name="Ball" parent="." groups=["Saveable"] instance=ExtResource("2_425si")]
unique_name_in_owner = true
position = Vector2(576, 324)
collision_layer = 2
collision_mask = 0

[node name="Interface" parent="." instance=ExtResource("5_6d8qe")]
unique_name_in_owner = true

[node name="SaverLoader" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("6_w02vb")

[connection signal="ready" from="." to="." method="_ready"]
